# spectral-attention

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
agent/: agent.md
docs/: api.md  design.md  experiments.md  index.md
experiments/: README.md
experiments/compare/: benchmark_report_numeric.csv  benchmark_report_pretty.csv
notebooks/: 00_quickstart.ipynb  01_freq_response_plots.ipynb  02_long_context_eval.ipynb  03_benchmark_report.ipynb  04_Performance_Benchmark.ipynb  05_multilang_compare.ipynb  hybrid_attention_demo.ipynb
notebooks/experiments/runs/multilang_notebook/: results_20250917-122131.jsonl
notebooks/experiments/runs/scaling_analysis/: metrics.jsonl
scripts/: bench_flashspectra.py  bench_spectral_attention.py  compare.py  compare_suite.py  eval_imdb.py  eval_lm.py  hf_gpt2_demo.py  hf_gpt2_lm_demo.py  hf_multilang_compare.py  plot_freq_response.py  plot_training_metrics.py  publish_local.py  smoke_train.py  speed_eval_external.py  train_imdb.py  train_lm.py  train_lm_hf_baseline.py  train_lm_hf_spectral.py  train_lm_hf_trainer.py  train_sanity.py
src/spectral_attention/: __init__.py  blocks.py  holonomy.py  metrics.py  models.py  models_cls.py  spectral_attention.py  train_eval.py  utils.py  vanilla_blocks.py
src/spectral_attention/integrations/: __init__.py  hf_gpt2.py
src/spectral_attention/layers/: __init__.py  hybrid_layer.py
tests/: test_blocks.py  test_flash_integration.py  test_holonomy.py  test_hybrid_layer.py  test_regularizers.py  test_smoke.py  test_spectral_attention.py
